--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
-<div id="app">
-    <h3>
-      Debug
-    </h3>
 
-    <div>
-        Attr sum: {{attr_sum}} / 130
-    </div>
-    <h3>
-    Character
-    </h3>
-    <div>
-        Name: {{ name }}
-    </div>
-    <div>
-        Level: {{ level }}
-        <button v-on:click="level_increase">+</button>
-        <button v-on:click="level_decrease">-</button>
-    </div>
-    <h3>
-      Attributes
-    </h3>
-    <div>
-        <ul>
-            <li>
-                Strength: {{ strength }}
-                <button v-on:click="attr_strength_inc">+</button>
-            </li>
-            <li>Endurance: {{ endurance }}</li>
-            <li>Coordination: {{ coordination }} </li>
-            <li>Quickness: {{ quickness }}</li>
-            <li>Focus: {{ focus }}</li>
-            <li>Self: {{ self }}</li>
-            <li>Health: {{ health }} </li>
-            <li>Stamina: {{ stamina }}</li>
-            <li>Mana: {{ mana }}</li>
-        </ul>
-    </div>
-    <h3>
-      Skills:
-    </h3>
-    <div>
-        Some Skill: {{ someskill }}
-    </div>
+
+<div id="app">
+    <h3>Debug</h3>
+    <div>Attr sum: {{attr_sum}}</div>
+    <div>Skill credits: {{used_skill_credits}} / {{total_skill_credits}}</div>
+    <div>{{ specialized_skills }}</div>
+
+    <h3>Character</h3>
+    <div>Name: {{ name }}</div>
+    <div>Level: <input type="text" v-model="level" /></div>
+
+    <h3>Attributes</h3>
+    <ul>
+      <li>Strength: <input type="text" v-model="attributes.strength" /></li>
+      <li>Endurance: <input type="text" v-model="attributes.endurance" /></li>
+      <li>Coordination: <input type="text" v-model="attributes.coordination" /></li>
+      <li>Quickness: <input type="text" v-model="attributes.quickness" /></li>
+      <li>Focus: <input type="text" v-model="attributes.focus" /></li>
+      <li>Self: <input type="text" v-model="attributes.self" /></li>
+      <li>Health: {{ health }}</li>
+      <li>Stamina: {{ stamina }}</li>
+      <li>Mana: {{ mana }}</li>
+    </ul>
+
+    <h3>Skills</h3>
+    <h4>Specialized</h4>
+    <ul>
+      <li v-for="skill in specialized_skills">
+        {{ skill.name }}: {{ skill.value }}
+        <button v-on:click="training_increase" data-skill="{{skill.name}}">+</button>
+        <button v-on:click="training_decrease" data-skill="{{skill.name}}">-</button>
+      </li>
+    </ul>
+
+    <h4>Trained</h4>
+    <ul>
+      <li v-for="skill in trained_skills">
+        {{ skill.name }}: {{ skill.value }}
+        <button v-on:click="training_increase" data-skill="{{skill.name}}">+</button>
+        <button v-on:click="training_decrease" data-skill="{{skill.name}}">-</button>
+      </li>
+    </ul>
+
+    <h4>Untrained</h4>
+    <ul>
+      <li v-for="skill in untrained_skills">
+        {{ skill.name }}: {{ skill.value }}
+        <button v-on:click="training_increase" data-skill="{{skill.name}}">+</button>
+        <button v-on:click="training_decrease" data-skill="{{skill.name}}">-</button>
+      </li>
+    </ul>
 </div>
 
+<script src="underscore.js"></script>
 <script src="https://cdn.jsdelivr.net/vue/latest/vue.js"></script>
 <script src="app.js"></script>
