--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div id="app">
     <h3>Debug</h3>
     <div>Attr sum: {{attr_sum}}</div>
-    <div>Skill credits: {{used_skill_credits}} / {{total_skill_credits}}</div>
+    <div>Skill credits: {{used_skill_credits}} / {{total_skill_credits}} ({{remaining_skill_credits}} remaining)</div>
 
     <h3>Character</h3>
     <div>Name: {{ name }}</div>
