Remove explicit input values on attributes

--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
     <ul>
       <li>
         Strength: 
-        <input type="range" id="attributes.strength" min="30" value="30" max="100" step="1" v-model="attributes.strength">
+        <input type="range" id="attributes.strength" min="30" max="100" step="1" v-model="attributes.strength">
         <span>{{ attributes.strength }}</span>
       </li>
       <li>
         Endurance:
-        <input type="range" id="attributes.endurance" min="30" value="30" max="100" step="1" v-model="attributes.endurance" />
+        <input type="range" id="attributes.endurance" min="30" max="100" step="1" v-model="attributes.endurance" />
         <span>{{ attributes.endurance }}</span>
       </li>
       <li>
         Coordination:
-        <input type="range" id="attributes.coordination" min="30" value="30" max="100" step="1" v-model="attributes.coordination" />
+        <input type="range" id="attributes.coordination" min="30" max="100" step="1" v-model="attributes.coordination" />
         <span>{{ attributes.coordination }}</span>
       </li>
       <li>
         Quickness:
-        <input type="range" id="attributes.quickness" min="30" value="30" max="100" step="1" v-model="attributes.quickness" />
+        <input type="range" id="attributes.quickness" min="30" max="100" step="1" v-model="attributes.quickness" />
         <span>{{ attributes.quickness }}</span>
       </li>
       <li>
         Focus:
-        <input type="range" id="attributes.focus" min="30" value="30" max="100" step="1" v-model="attributes.focus" />
+        <input type="range" id="attributes.focus" min="30" max="100" step="1" v-model="attributes.focus" />
         <span>{{ attributes.focus }}</span>
       </li>
       <li>
         Self:
-        <input type="range" id="attributes.self" min="30" value="30" max="100" step="1" v-model="attributes.self" />
+        <input type="range" id="attributes.self" min="30" max="100" step="1" v-model="attributes.self" />
         <span>{{ attributes.self }}</span>
       </li>
       <li>
